# drop

./: .gitignore  LICENSE  Makefile  README.md  changelog  dws.xml  index  index.book  index.xml  requirements.txt
doc/: Makefile  (+17 more)
src/: MANIFEST.in  README.md  build.xsl  buildpkg.py  configure.sh  crossprefix.mk  crosssuffix.mk  dbldpkg.py  dcontext.py  dcopylogs.py  dintegrity.py  dissues.py  dlogfilt.py  dlogwatch.py  dmake.py  dparselog.py  dregress.py  drestore.py  drundocker.py  dservices.py  dstamp.py  dsync.py  dtero.py  dtimeout.py  duploades.py  dws.py  excludes-Ubuntu8.10  index.xsd  logrotate-hook.sh  prefix.mk  pyproject.toml  setup.py  suffix.mk
src/dws/: __init__.py
src/scripts/: dauthcmd  dbldpkg  dcloud  dcloud-ami  dcopylogs  dintegrity  dissues  dlogwatch  dmonitor  dregress  dservices  dsettings  dstamp
src/tero/: __init__.py  crypt.py  dauthcmd.py  dcopylogs.py  dissues.py  dlogwatch.py  dparselog.py  dregress.py  driver.py  drundocker.py  dstamp.py  vmware.py
src/tero/clouds/: awscloud.py  monitor.py
src/tero/clouds/templates/: app-cloud-init-script.j2  dbs-cloud-init-script.j2  mail-cloud-init-script.j2  sally-cloud-init-script.j2  (+1 more)
src/tero/setup/: __init__.py  amazon-cloudwatch-agent.py  bash.py  cron.py  docker-rsyslog.tpl  docker-syslog.tpl  docker.py  dovecot.py  fail2ban.py  gitlab.py  http.tpl  https.tpl  integrity.py  iptables.py  jenkins.py  local.py  logrotate.py  logrotatehook.py  monit.py  nginx.py  openssh.py  postfix.py  postgres.py  proxy.tpl  sldap.py  ssmtp.py  sssd.py  syslog.py  webapp-rsyslog.tpl  webapp-syslog.tpl
(+213 files in other folders)
